--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ button {
    padding-top: 24px;
    padding-bottom: 24px;
    display: block;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -126,6 +127,22 @@ button {
 
 .nav-link:active {
    color: var(--color-nav-hover);
+}
+
+.nav-list .active-link {
+   position: relative;
+   color: var(--color-nav-hover);
+}
+
+.nav-list .active-link::after {
+   content: '';
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 48px;
+   height: 4px;
+   background-color: var(--color-nav-hover);
+   border-radius: 2px;;
 }
 
  .logo {
@@ -163,6 +180,8 @@ button {
    display: flex;
    padding-top: 24px;
    padding-bottom: 24px;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
  }
 
  .address-link:hover,
