--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
    --color-nav-hover: #404BBF;
    --color-fill: #8E8F99;
    --color-footer-hover: #31D0AA;
+   --color-modal: #FCFCFC;
 
 }
 
@@ -634,5 +635,79 @@ button {
 
 .work-image:hover .work-description {
    transform: translateY(0);
+}
+
+/* modal */
+
+.backdrop {
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+   padding: 20px 0;
+   width: 100%;
+   height: 100%;
+
+   background-color: rgba(46, 47, 66, 0.4);
+   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+   opacity: 0;
+   visibility: hidden;
+   pointer-events: none;
+}
+
+.modal {
+   position: relative;
+   width: 100%;
+   max-width: 408px;
+   max-height: 576px;
+   height: 100%;
+   background-color: var(--color-modal);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+   transform: scale(0);
+}
+
+.modal .close-button {
+   position: absolute;
+   top: 24px;
+   right: 24px;
+
+   height: 24px;
+   width: 24px;
+   background-color: var(--footer-text-color);
+   color: #000;
+   border: 1px solid rgba(0, 0, 0, 0.1);
+   border-radius: 50%;
+   margin: 0;
+
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal .close-button:hover,
+.modal .close-button:focus {
+   background-color: var(--color-nav-hover);
+   color: var(--background-color);
+}
+
+.close-button .close-icon {
+   position: absolute;
+   display: block;
+   width: 8px;
+   height: 8px;
+   
+   fill: currentColor;
+   margin: 0;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
 }
 
