--- a/css/styles.css
+++ b/css/styles.css
@@ -538,6 +538,52 @@ button {
    width: 24px;
    height: 24px;
 }
+.subscribe-form {
+   text-align: center;
+}
+
+.subscribe-tittle {
+   margin-bottom: 16px;
+}
+
+.subscribe-field {
+   display: flex;
+   gap: 24px;
+   align-items: center;
+}
+
+.mail-input {
+   width: 264px;
+   height: 40px;
+   padding-top: 8px;
+   padding-bottom: 8px;
+   padding-left: 16px;
+   font-size: 12px;
+   line-height: 2;
+   background-color: transparent;
+   color: var(--footer-text-color);
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   border-radius: 4px;
+   
+}
+
+.subscribe-button {
+   padding: 8px 24px;
+   gap: 16px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: var(--background-color);
+   background-color: var(--color-logo-btn);
+   border-radius: 4px;
+   border-color: var(--color-logo-btn);
+}
+
+.subscribe-icon {
+   width: 24px;
+   height: 24px;
+   fill: currentColor;
+}
 
 /*Portfolio*/
 
